--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.0-rc.11",
     "cross-env": "^7.0.3",
+    "git-branch-is": "^4.0.0",
     "husky": "^8.0.0",
     "node-fetch": "^3.2.4"
   }
